[project]
authors = [{name = "Frank Loesche", email = "loeschef@janelia.hhmi.org"}]
name = "madvisc-template"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["male-drosophila-visual-system-connectome-code @ https://github.com/reiserlab/male-drosophila-visual-system-connectome-code.git"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.pypi-dependencies]
madvisc_template = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipykernel = ">=6.29.5,<7"
pip = ">=25.1.1,<26"
python-dotenv = ">=1.1.0,<2"
ipywidgets = ">=8.1.7,<9"
openpyxl = ">=3.1.5,<4"
